# InertialPoseLib

./: CMakeLists.txt  README.md
example/: example-PoseEstimation.cpp
include/InertialPoseLib/: DataType.hpp  LinearAlgebra.hpp  PoseEstimation.hpp  Utils.hpp
src/: LinearAlgebra.cpp  PoseEstimation.cpp
